--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Pande Ketut Cahya Nugraha</title>
@@ -5,12 +6,12 @@
     <body>
         <h1>This web currently being developed to be my personal website</h1>
         <h2>Meanwhile, see the following links for my works</h2>
-        <li>
-            <ul><a>https://www.linkedin.com/in/cahyanugraha12/</a></ul>
-            <ul><a>http://cahya-nugraha.herokuapp.com</a></ul>
-            <ul><a>http://ppw-e-cahyanugraha.herokuapp.com</a></ul>
-            <ul><a>http://ppw-e-tdd-cahyanugraha.herokuapp.com</a></ul>
-            <ul><a>https://ppw-e-kelompok2.herokuapp.com</a></ul>
-        </li>
+        <ul>
+            <li><a>https://www.linkedin.com/in/cahyanugraha12/</a></li>
+            <li><a>http://cahya-nugraha.herokuapp.com</a></li>
+            <li><a>http://ppw-e-cahyanugraha.herokuapp.com</a></li>
+            <li><a>http://ppw-e-tdd-cahyanugraha.herokuapp.com</a></li>
+            <li><a>https://ppw-e-kelompok2.herokuapp.com</a></li>
+        </ul>
     </body>
 </html>
