--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <h1>This web currently being developed to be my personal website</h1>
         <h2>Meanwhile, see the following links for my works</h2>
         <ul>
-            <li><a>https://www.linkedin.com/in/cahyanugraha12/</a></li>
-            <li><a>http://cahya-nugraha.herokuapp.com</a></li>
-            <li><a>http://ppw-e-cahyanugraha.herokuapp.com</a></li>
-            <li><a>http://ppw-e-tdd-cahyanugraha.herokuapp.com</a></li>
-            <li><a>https://ppw-e-kelompok2.herokuapp.com</a></li>
+            <li><a href="https://www.linkedin.com/in/cahyanugraha12/">https://www.linkedin.com/in/cahyanugraha12/</a></li>
+            <li><a href="http://cahya-nugraha.herokuapp.com">http://cahya-nugraha.herokuapp.com</a></li>
+            <li><a href="http://ppw-e-cahyanugraha.herokuapp.com">http://ppw-e-cahyanugraha.herokuapp.com</a></li>
+            <li><a href="http://ppw-e-tdd-cahyanugraha.herokuapp.com">http://ppw-e-tdd-cahyanugraha.herokuapp.com</a></li>
+            <li><a href="https://ppw-e-kelompok2.herokuapp.com">https://ppw-e-kelompok2.herokuapp.com</a></li>
         </ul>
     </body>
 </html>
