Add super cringy stuff

--- a/index.html
+++ b/index.html
@@ -5,13 +5,161 @@
     </head>
     <body>
         <h1>This web currently being developed to be my personal website</h1>
+        <h2>I am a master procrastinator. Therefore it might take a long time for me to be motivated enough to finish this web</h2>
         <h2>Meanwhile, see the following links for my works</h2>
         <ul>
-            <li><a href="https://www.linkedin.com/in/cahyanugraha12/">https://www.linkedin.com/in/cahyanugraha12/</a></li>
-            <li><a href="http://cahya-nugraha.herokuapp.com">http://cahya-nugraha.herokuapp.com</a></li>
-            <li><a href="http://ppw-e-cahyanugraha.herokuapp.com">http://ppw-e-cahyanugraha.herokuapp.com</a></li>
-            <li><a href="http://ppw-e-tdd-cahyanugraha.herokuapp.com">http://ppw-e-tdd-cahyanugraha.herokuapp.com</a></li>
-            <li><a href="https://ppw-e-kelompok2.herokuapp.com">https://ppw-e-kelompok2.herokuapp.com</a></li>
+            <li><a href="https://www.linkedin.com/in/cahyanugraha12/">My LinkedIn Profile</a></li>
+            <li><a href="http://cahya-nugraha.herokuapp.com">My Old Personal Website</a></li>
+            <li><a href="http://ppw-e-cahyanugraha.herokuapp.com">My Perancangan & Pemrograman Web Assignment, before using TDD</a></li>
+            <li><a href="http://ppw-e-tdd-cahyanugraha.herokuapp.com">My Perancangan & Pemrograman Web, after using TDD</a></li>
+            <li><a href="https://ppw-e-kelompok2.herokuapp.com">Perancangan & Pemrograman Web 'Group' Assignment</a></li>
         </ul>
+        <h3>Psst, wanna read something potentially cringy and edgy?</h3>
+        <div style="color:white;">
+            <h1>Welcome to my crude Blog</h1>
+            =======================================================================================================
+            <h3>27 January 2019 - Home, Travelling, RPG, and Fantasy</h3>
+            =======================================================================================================
+            <div>
+                <strong>'Home is where the heart is.'</strong>
+                <p>Di usiaku yang sudah hampir menginjak kepala dua, aku masih belum menemukan tempat yang 'klop' untuk hatiku.</p>
+                <p>Perhaps I never will.</p>
+
+                <p>Sejak SMP, setelah my so-called 'forced maturation' di SD, aku mulai membaca banyak novel-novel fiksi.
+                Mulai dari Harry Potter, Inheritance Tetralogy, The Host (Yap, punyanya Stephanie Meyer, don't judge me T_T), The Hunger Games, Artemis Fowl, 
+                Percy Jackson, dsb. plus most recently Crazy Rich Asian.
+                Ditambah numerous Anime dan Light Novel, mayoritas fantasy dan historical (that includes alternate).
+                Lalu video games, pertama dari gamesnya PopCap (Zuma, Sally Salon, Insaniquarium, Diner Dash, dsb.) lalu ke FPS (Counter Strike warnet deket rumah, will never forget you)
+                multiplayernya Battlefield 2 dan COD MW3 (please forgive my obnoxious teen self back then, Kaskus BF2 and MNTH), dan akhirnya ke RPG macam TES, ME, dan DA
+                serta 4X plus Grand Strategynya Paradox.</p>
+
+                <p>Semua yang dihighlight share a common thing. Mereka semua alternate reality bagiku. Something that 'could be' for me.
+                Sejak aku mulai melihat dunia ini abu-abu saat kelas 2 SD (I always thought highly of myself), mereka semua merepresentasikan segalanya yang could go right in my life.
+                They offer me different perspective, different point of view, hal yang bisa mendistraksi diri dari hal lainnya yang aku benci dari realita disekelilingku.
+                Ultimately, mereka semua cuma fiksi. They will never suffice for me, because I will never be able to experience it myself.</p>
+
+                <p>Mulailah aku memutar diri ke travelling. Untuk seseorang yang kelihatannya sangat relucant to go out, keinginanku untuk berpergian itu tinggi sekali.
+                Namun, berpergian yang aku inginkan berbeda dari kebanyakan orang. Diriku tak mau berpergian hanya untuk bersenang-senang sesaat, ke tempat yang familiar,
+                lalu kembali lagi ke realita yang sama.</p>
+
+                <h4>Tidak.</h4>
+
+                <h4>Aku ingin mencari tempat untuk hatiku.</h4>
+
+                <p>Pernah aku bercerita ke temanku bahwa grafik kemauanku untuk berpergian dengan jarak membentuk kurva cembung ke bawah, dengan kemauan sebagai Y-axis dan jarak sebagai X-axis.
+                That is not strictly true. The reason that I crave for travelling to far away place and utterly despise going to nearby places is that I want to travel because I am searching for a home.
+                Pergi ke Pantai Pandawa, GWK, atau other places di Bali tidak akan menghasilkan apapun bagiku. Tidak ada yang berbeda dengan realita 18 tahun hidupku.
+                Bali is not where my heart is. Mungkin benar sebelum aku SD atau saat masa-masa indah SMA. Tapi tidak untuk sekarang. Semua kenangan indah telah berpencar, hanya meninggalkan bayangnya, hilang sudah segala yang mampu menahan memori buruk.
+                Jakarta and Depok, on the other hand, belum 100% 'klop'. Masih terlalu singkat. One of the reasons kenapa aku senang sekali tiap kali diajak menelusuri Jakarta.</p>
+
+                <p>Ultimately, I know that my heart will never entirely here. Bila ada portal menuju tempat lain yang tiba-tiba muncul didepanku, bukan tidak mungkin aku akan meninggalkan segalanya dan masuk kedalamnya.</p>
+            </div>
+            =======================================================================================================
+            <h3>30 December 2018 - 2018 Ultimate Post</h3>
+            =======================================================================================================
+            <div>
+                2018.<br>
+                .<br>
+                Tahun yang memberikan perubahan terbesar selama 19 tahun hidup di dunia ini.<br>
+                Tahun yang membuatku jauh lebih berani dan yakin dengan diri sendiri.<br>
+                Tahun yang mampu membuatku lebih outgoing dan sosial tanpa kehilangan kemampuan untuk menikmati 3 hari "me time".<br>
+                Tahun yang membawa diriku sedih dan depresi sekaligus senang dan bangga. ( suer ga bipolar kok :") )<br>
+                Tahun yang meyakinkanku untuk terus maju di jalan ini.<br>
+                .<br>
+                Thanks, 2018. Will miss you when I left you for 2019.<br>
+            </div>
+            =======================================================================================================
+            <h3>12 April 2018 - Shelter</h3>
+            =======================================================================================================
+            <div>
+                <h3>Shelter</h3>
+
+                <p>Porter Robinson & Madeon : Shelter. When it's music video appears on my YouTube Home (it's what recommendation called before), i thought
+                it was just some cringy anime video (despite being an avid anime lovers at the time). An accidental swipe from my index finger and suddenly 
+                i was swept by a soothing and melancolic melody. I may have fallen in love with it at the time, but due to my bad hearing and immaturity, i didn't
+                understand the song very much and immediately left it alone after listening once.</p>
+
+                <p>A year later, on an English class, my teacher plays the song in the class and asked us to contemplate about it's meaning. At first, i am shocked 
+                when i saw it again after a long time. It stirred my feeling again, and i was so distracted that when my teacher asked what we thought, i didn't 
+                say anything. None in the class say anything, and then my teacher tell us of her interpretation of the song. I am distraught, began to contemplate 
+                a lot, but then dismissed it from my mind, even thought there was a nagging feeling on my mind.</p>
+
+                <p>At 07.54, 12th April 2018, after a month of feeling an all-time low in my life, i saw it again on my recommendation. I immediately plays it while 
+                walking to the campus. And again it stirred my feeling again. My mind keeps wandering for the day. It keeps reminding me of what is my purpose here. 
+                At 22.17, on the ride to my kost, i am reminded. That i am here "go forward", while "leaving behind my home", to do something greater, and "i know 
+                i'm not alone", because i know they "watching over me", and that "something greater", is meant to "give shelter" toward many people, and i "don't need 
+                to be known", and the knowledge that that "something greater" will be "carried on by them" is enough.</p>
+
+                <h4>12.11 AM, 13th April 2018. One day and eleven minutes after my 19th birthday, i found that strength again.</h4>
+            </div>
+            =======================================================================================================
+            <h3>28 March 2018 - Friendship</h3>
+            =======================================================================================================
+            <div>
+                <h3>Friendship</h3>
+
+                <p>If you ask me how many friends i have, i will tell you that it's countable with both hands. Yeah, that's not many compared
+                to a lot of people, but first you have to know that my definition of "friend" is very strict. While lots of people
+                say someone is their friend when they only met once or they were classmate back in Junior High, i don't. I will not 
+                consider someone a friend simply by the virtue of mutual class. I will not say someone is a friend when we work together 
+                in a group for a time and rarely talks after that. My definition of "friend" is a lot stricter than that. What people 
+                say as a friend, i say an acquintance. What people say as a close friend, i say a friend. You can say that a person
+                i know is either an acquintance or a close friend. Together with my introverted nature, it's not surprising 
+                that i have much less friends than normal people.</p>
+
+                <p>Why's that? Why is my definition of "friend" is so strict? Bear with me for a while because this will be a (relatively) 
+                long story to why the definition is so strict.</p>
+
+                <p>When you see my history with people, you'll see an abnormal pattern. Majority of my friends is people who i hate at first,
+                then somehow become friends (close friend, if other normal people see it).</p>
+
+                <h4>Notes added on 27 January 2019 : Yes, this one is not finished, since MARCH</h4>
+            </div>
+            =======================================================================================================
+            <h3>24 March 2018 - Reality, Fantasy, and The Wandering Inn</h3>
+            =======================================================================================================
+            <div>
+                <h3>Reality, Fantasy, and The Wandering Inn</h3>
+
+                <p>There are numerous kind of fantasy fiction, such as Urban Fantasy where fantastic elements emerge in
+                a modern setting, Hard Fantasy with it's emphasis on rational and realistic world, Historical Fantasy that 
+                merge fantastic elements with historical narrative, etc. But when we ask people to describe fantasy,
+                it's usually not far off from dragons, dwarves, elves, monster, and so on. That is, High (or Epic) fantasy.</p>
+
+                <p>High Fantasy is perhaps the most common form of fantasy fiction, usually influenced by elements from it's progenitor,
+                the legendary Lord of the Rings and it's army of clone works. Most fans of fantasy fiction dreams of living in wonderful
+                and exciting world depicted there. I think so too. Or rather, i thought so too.</p>
+
+                <ul>
+                    <li>How High Fantasy usually parallel Medieval Age</li>
+                    <li>How an Average Joe won't survive in such world</li>
+                    <li>Points that the fantasy isn't as exciting as depicted</li>
+                    <li>Brings The Wandering Inn as a realistic slice-of-life slash fantasy that
+                        depict correctly that such world is dangerous</li>
+                    <li>Explain that stories are exciting because the removed the boring part that characters experience</li>
+                    <li>
+                        <p>
+                            Conclude that while fantasy is, while not so exciting now, still more exciting than our reality,
+                            it is simply not feasible for us to live there, and points that we as human beings always desire what
+                            we don't have, not that different from Medieval ages people that maybe want a world like ours, and we
+                            have to accept that.
+                        </p>
+                    </li>
+                </ul>
+
+                <h4>Notes added on 27 January 2019 : Yes, this one is not finished, since MARCH</h4>
+            </div>
+            =======================================================================================================
+            <h3>20 March 2018 - Change</h3>
+            =======================================================================================================
+            <div>
+                <h3>Change</h3>
+
+                <p>I'm changing. For better or worse, i don't know. But i know i'm changing. Since i entered university, i experience many things
+                that changed me. Friends, knowledges, activities, and many things. The young adult who wrote this is not the same with the teenager
+                who sit in class XII-5 in the past. I'm changing. For better or worse, we'll see.</p>
+            </div>
+            =======================================================================================================
+        </div>
     </body>
 </html>
